--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Module specific ignores
+bin*
+.sconsign.dblite
+
+# etc
+*.swp # vim swap files
